--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "method-override": "^3.0.0",
     "moongose": "^1.0.0",
     "pug": "^3.0.3"
   },
